tests/ui/capability_not_send_sync.stderr
error[E0277]: `(dyn NotSendSync + 'static)` cannot be shared between threads safely
  --> tests/ui/capability_not_send_sync.rs:14:23
   |
14 |     type Capability = dyn NotSendSync; // WRONG: NotSendSync does not implement Send+Sync
   |                       ^^^^^^^^^^^^^^^ `(dyn NotSendSync + 'static)` cannot be shared between threads safely
   |
   = help: the trait `Sync` is not implemented for `(dyn NotSendSync + 'static)`
note: required by a bound in `trait_kit::core::CapabilityKey::Capability`
  --> src/core/capability.rs
   |
   |     type Capability: ?Sized + Send + Sync + 'static;
   |                                      ^^^^ required by this bound in `CapabilityKey::Capability`

error[E0277]: `(dyn NotSendSync + 'static)` cannot be sent between threads safely
  --> tests/ui/capability_not_send_sync.rs:14:23
   |
14 |     type Capability = dyn NotSendSync; // WRONG: NotSendSync does not implement Send+Sync
   |                       ^^^^^^^^^^^^^^^ `(dyn NotSendSync + 'static)` cannot be sent between threads safely
   |
   = help: the trait `Send` is not implemented for `(dyn NotSendSync + 'static)`
note: required by a bound in `trait_kit::core::CapabilityKey::Capability`
  --> src/core/capability.rs
   |
   |     type Capability: ?Sized + Send + Sync + 'static;
   |                               ^^^^ required by this bound in `CapabilityKey::Capability`
